--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,12 @@ h6,
 p,
 ul,
 ol {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 /* Убирает декор списков и линков */
@@ -60,11 +64,13 @@ ol {
 }
 
 /* Шапка */
+
 header .container {
   display: flex;
 }
 
 .header {
+  border: 1px solid #ececec;
 }
 .header-nav {
   display: flex;
@@ -138,7 +144,6 @@ header .container {
 }
 
 .hero-title {
-  display: flex;
   font-size: 44px;
   font-weight: 900;
   line-height: 1.4;
@@ -221,9 +226,6 @@ header .container {
 .work-list-item:not(:last-child) {
   margin-right: 30px;
 }
-.work-pic {
-  display: block;
-}
 
 /*  Чем занимаются + команда */
 
@@ -258,10 +260,6 @@ header .container {
 }
 .team-profile:not(:last-child) {
   margin-right: 30px;
-}
-
-.team-photo {
-  display: block;
 }
 
 .team-name {
@@ -326,7 +324,23 @@ header .container {
 
 /* !! ПОРТФОЛИО !! */
 
+.filter-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 94px;
+  margin-bottom: 34px;
+}
+.filter-item {
+}
+.filter-item:not(:last-child) {
+  margin-right: 8px;
+}
+
 .filter-btn {
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  padding-right: 22px;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.6;
@@ -335,6 +349,9 @@ header .container {
   color: var(--main-text-dark-color);
   background-color: var(--secondary-bgc);
 
+  border: 0;
+  border-radius: 4px;
+
   cursor: pointer;
 }
 
@@ -342,15 +359,49 @@ header .container {
 [type="button"]:focus {
   color: var(--secondary-text-color);
   background-color: var(--accent-color);
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+/* КАРТОЧКИ ПРОЕКТОВ */
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+
+  margin-bottom: 94px;
 }
 
 .projects-card {
+  width: calc((100% - 2 * 30px) / 3);
+
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  width: 370px;
+  height: 404px;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.9;
 
   color: var(--main-text-color);
 }
+
+/* Убираем крайний правый отступ в каждой 3-й карточке / крайний нижний отступ у каждой посл. карточке */
+.projects-card:nth-child(3n) {
+  margin-right: 0;
+}
+.projects-card:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.project-desc {
+  padding: 20px 24px;
+  border-left: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+}
+
 .project-title {
   font-size: 18px;
   font-weight: 700;
