--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@ img {
   padding-right: 15px;
 }
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* Шапка */
 
 header .container {
@@ -134,12 +139,10 @@ header .container {
 
 /* Hero !!   добавлен фон что бы было видно текст*/
 .hero {
-  display: flex;
   align-items: center;
-  min-height: 600px;
-  padding-top: auto;
-  padding-bottom: auto;
   text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: var(--footer-bgc);
 }
 
@@ -162,6 +165,7 @@ header .container {
   margin-top: 30px;
   padding: 10px 32px;
 
+  border: none;
   border-radius: 4px;
   letter-spacing: 0.06em;
   color: var(--secondary-text-color);
@@ -193,8 +197,6 @@ header .container {
 
 .features-list {
   display: flex;
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 .features-list-item {
@@ -206,6 +208,7 @@ header .container {
   margin-right: 30px;
 }
 .features-title {
+  font-size: 14px;
   margin-bottom: 10px;
   font-weight: 700;
   text-transform: uppercase;
@@ -215,14 +218,18 @@ header .container {
 /* Work */
 
 .work {
+  padding-top: 0;
 }
 .work-list {
   display: flex;
 }
-.work-list-item {
-  margin-top: 50px;
-  margin-bottom: 94px;
+
+.work .title {
+  margin-bottom: 50px;
 }
+.work-list-item {
+}
+
 .work-list-item:not(:last-child) {
   margin-right: 30px;
 }
@@ -241,18 +248,14 @@ header .container {
   color: var(--main-text-dark-color);
 }
 .team .title {
-  padding-top: 94px;
 }
 
 .team-list {
   display: flex;
   padding-top: 50px;
-  padding-bottom: 94px;
 }
 
 .team-profile {
-  min-width: 270px;
-  min-height: 368px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -271,6 +274,7 @@ header .container {
 }
 .team-position {
   margin-top: 10px;
+  margin-bottom: 30px;
   text-align: center;
 }
 
@@ -278,15 +282,15 @@ header .container {
 
 .footer {
   background-color: var(--footer-bgc);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer .container {
-  min-height: 252px;
+  /* min-height: 252px; */
 }
 
 .footer-logo-link {
-  display: inline-block;
-  margin-top: 60px;
   color: var(--secondary-text-color);
 }
 .footer-logo {
@@ -327,8 +331,7 @@ header .container {
 .filter-list {
   display: flex;
   justify-content: center;
-  margin-top: 94px;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
 }
 .filter-item {
 }
@@ -368,8 +371,6 @@ header .container {
 .projects-list {
   display: flex;
   flex-wrap: wrap;
-
-  margin-bottom: 94px;
 }
 
 .projects-card {
