--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,8 @@ header .container {
   margin-top: 30px;
   padding: 10px 32px;
 
-  border: none;
+  /* border: 0; */
+  border-style: none;
   border-radius: 4px;
   letter-spacing: 0.06em;
   color: var(--secondary-text-color);
