--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ header .container {
   margin-top: 30px;
   padding: 10px 32px;
 
-  /* border: 0; */
+  border: 0;
   border-style: none;
   border-radius: 4px;
   letter-spacing: 0.06em;
